[package]
name = "postman-contract"
description = "A cargo-generate template for Rust + Sway integration testing."
version = "0.1.0"
edition = "2021"
authors = ["ec2-user"]
license = "Apache-2.0"

[dev-dependencies]
fuels = { version = "0.31", features = ["fuel-core-lib"] }
tokio = { version = "1.12", features = ["rt", "macros"] }

[[test]]
harness = true
name = "postman-contract-test"
path = "tests/harness.rs"
